--- a/style.css
+++ b/style.css
@@ -399,6 +399,20 @@ h1{
     text-decoration: none;
     border-radius: 0.5rem;
 }
+.btn-3{
+    color:white;
+    border: 2px solid transparent;
+    font-weight: 600;
+    font-size: .9375rem;
+    letter-spacing: -.02em;
+    background: #b3daf0;
+    
+    position: relative;
+    text-decoration: none;
+    border-radius: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 
 .sticky.sticky-direction-top{
    
@@ -589,11 +603,11 @@ h1{
 }
 .scrollspy-container h2{
     margin: 0;
-    font-size: 30px;
+    font-size: 30.5px;
     font-weight: 600;
     line-height: 2.25rem;
     letter-spacing: -0.05rem;
-   
+    
 }
 .section-master-1 .section-master__slot:not(:first-child) {
     margin-top:2rem;
@@ -2646,16 +2660,19 @@ footer{
     margin-top: 48px;
     
 }
-.column{
-    display: flex;
-    gap: 50px;
-}
+
 .exploreazure{
     margin: 0 auto;
     width: 100%;
   
     padding: 0 5%;
 }
+.column{
+    display: flex;
+    column-gap: 100px;
+    
+} 
+    
 .questions{
     padding: 0 12px;
     width:fit-content ;
@@ -2701,6 +2718,7 @@ footer{
     font-family: 'sego-semibold';
     
 }
+
 @media(max-width:539px){
     .column{
         flex-direction: column;
@@ -2715,6 +2733,12 @@ footer{
     .exploreazure{
         padding: 0 12px;
     }
+   
+}
+@media(max-width:1083px) and (min-width:615px){
+    .column{
+        white-space: nowrap;
+    }
 }
 @media(max-width:767px){
     .c-uhff-base ul.c-list{
@@ -2723,21 +2747,43 @@ footer{
         margin-top: 12px;
     }
 }
-@media(min-width:1084px){
+
+
+@media(min-width:1084px) {
+    
+    
     .exploreazure{
         display: flex;
         gap: 100px;
         
     }
     .column{
-        gap: 100px;
+        gap: 50px;
     }
     
 
     
 }
 @media(min-width:1500px){
+    .questions{
+        white-space: nowrap;
+
+    }
+}
+@media(min-width:1678px) {
+    
+    .column{
+        gap: 80px;
+    }
+    .questions{
+        padding: 0 40px;
+        
+    }
+}
+
    
-}                            
-                                 
-             
+.block-heading--size{
+    margin: 0 0 0.65rem;
+}
+                           
+     
