--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 @font-face{
     font-family: 'icon-make';
-    src: url(/Azure/Font/icon.woff);
+    src: url(Font/icon.woff);
 }
 @font-face{
     font-family: 'sego-ui';
-    src: url(/Azure/Font/Sego-ui.woff2);
+    src: url(Font/Sego-ui.woff2);
 }
 @font-face{
     font-family: 'sego-semibold';
-    src: url(/Azure/Font/Semibold.woff2);
+    src: url(Font/Semibold.woff2);
 }
 @font-face{
     font-family: 'icon_2';
-    src: url(/Azure/Font/icon_2.woff2);
+    src: url(Font/icon_2.woff2);
 }
 *,::after,::before{
     box-sizing: border-box;
@@ -990,7 +990,7 @@ ul.accordion{
     content: "";
 }
 .background-1{
-    background: url(/Azure_2/Image/background-2.avif);
+    background: url(Image/background-2.avif);
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
@@ -1072,7 +1072,7 @@ h4{
     background:#0078d4 ;
 }
 .experimentfragment{
-    background: url(/Azure_2/Image/background-3.avif);
+    background: url(Image/background-3.avif);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -1282,7 +1282,7 @@ h4{
     overflow-y: hidden;
 }
 .background-5{
-    background-image: url(/Azure_2/Image/background-5.avif);
+    background-image: url(Image/background-5.avif);
     width: 100%;
     height: 100%;
     background-position:center center;
@@ -1307,7 +1307,7 @@ h4{
     margin: 2rem 0 0;
 }
 .background-6{
-    background: url(/Azure_2/Image/background-6.jpeg);
+    background: url(Image/background-6.jpeg);
     width: 100%;
     height: 100%;
     
@@ -1492,7 +1492,7 @@ h3{
     margin-top: 2rem;
 }
 .background-7{
-    background: url(/Azure_2/Image/background-7.avif);
+    background: url(Image/background-7.avif);
     width: 100%;
     height: 100%;
     background-size: cover;
